PriceService created, static code analysis - variable naming changed

--- a/templates/assets.html
+++ b/templates/assets.html
@@ -22,10 +22,11 @@
         <h1>Welcome, {{ username }}!</h1>
         <p>This is your money portfolio.</p>
     </div>
-	<div>
+	<div class="container mt-5">
         <h1>USD: {{ usdPrice }}</h1>
         <h1>BTC: {{ btcPrice }}</h1>
         <h1>ETH: {{ ethPrice }}</h1>
+        <h1>DOT: {{ dotPrice }}</h1>
         <h1>VUAA.UK: {{ vuaaPrice }}</h1>
 	</div>
 </body>
