Added gold price

--- a/templates/assets.html
+++ b/templates/assets.html
@@ -139,6 +139,13 @@
                 <td>NBP</td>
                 <td>{{ prices.NBP }} PLN</td>
             </tr>
+
+
+            <tr>
+                <th>7</th>
+                <td>GOLD</td>
+                <td>{{ prices.GOLD }} PLN</td>
+            </tr>
             </tbody>
 
         </table>
@@ -202,6 +209,14 @@
                 <td>{{ assets_per_name.USD }}</td>
                 <td>{{ values.USD }} PLN</td>
                 <td>{{ overall.USD }} %</td>
+            </tr>
+
+            <tr>
+                <th>7</th>
+                <td>GOLD</td>
+                <td>{{ assets_per_name.GOLD }}</td>
+                <td>{{ values.GOLD }} PLN</td>
+                <td>{{ overall.GOLD }} %</td>
             </tr>
 
             <tr>
