--- a/templates/assets.html
+++ b/templates/assets.html
@@ -75,11 +75,11 @@
         <div class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons">
-                    <button class="button is-light" onclick="download_data()">
+                    <button class="button is-primary" onclick="download_data()">
                         <strong>Download new data</strong>
                     </button>
-                    <a class="button is-primary">
-                        Log in
+                    <a href="{{ url_for('logout') }}" class="button is-light">
+                        Logout
                     </a>
                 </div>
             </div>
